--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.2.0",
     "react-particle-animation": "^2.0.2",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.1.0",
+    "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
